<resources>
    <!--<string name="app_name">RxJavaDemo</string>-->
    <string name="test_delay">测试延迟测试</string>
    <string name="reset_delay_count">重置倒计时为10秒</string>
    <string name="limit_printscreen">禁止截屏</string>
    <string name="allow_printscreen">允许截屏</string>
    <string name="origin_string">原始字符串</string>
    <string name="input_origin">请输入原始字符串</string>
    <string name="security_string">加密字符串</string>
    <string name="security_change">加密</string>
    <string name="scheme_open">网页打开app</string>
    <string name="scheme_link">hsbc</string>
    <string name="scan_qr_code">Scan QRCode</string>
    <string name="generate_qr_code">Generate QRCode</string>
    <string name="plz_put_code_in_rect">Please put QRCode in rect</string>
    <string name="qr_scan">二维码扫描</string>
    <string name="open_flash">OpenFlash</string>
    <string name="send_to_contact">Send To Contact</string>
    <string name="seperate_phonenumber">分离电话区号</string>
    <string name="input_country">输入国家(CN)</string>
</resources>
