<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout

            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="100dp">
            <TextView
                android:text="@string/origin_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_input"
                android:hint="@string/input_origin"
                android:layout_width="200dp"
                android:layout_height="40dp" />
        </LinearLayout>

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:id="@+id/tv_security_string"
            android:text="@string/security_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:id="@+id/btn_security"
            android:text="@string/security_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>